--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,5 @@
 @import "tailwindcss";
 
-*{
-  /* font-family: "Vujahday Script", cursive; */
-  /* font-family: "Nothing You Could Do", cursive; */
-  /* font-family: "Kaushan Script", cursive; */
-  /* font-family: "Seaweed Script", cursive; */
-  /* font-family: "Just Another Hand", cursive; */
-  font-family: "Julee", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.texto-simples {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;  
-  font-variation-settings:  "wdth" 100;
-}
-
 @layer utilities {
   .text-fit {
     font-size: clamp(10px, 5vw, 100px);
@@ -31,16 +12,26 @@
     font-size: 20px;
   }
 
-  /* .texto-simples {
+  .texto-script{
+    /* font-family: "Vujahday Script", cursive; */
+    /* font-family: "Nothing You Could Do", cursive; */
+    /* font-family: "Kaushan Script", cursive; */
+    /* font-family: "Seaweed Script", cursive; */
+    /* font-family: "Just Another Hand", cursive; */
+    font-family: "Julee", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .texto-simples {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-style: normal;
-    
-  } */
+    font-style: normal;  
+    font-variation-settings:  "wdth" 100;
+  }
 
   .flag-shape {
-    /* clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%); */
     clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
   }
 
